--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,6 +33,7 @@ collections:
     create: true
     slug: "product-{{slug}}"
     fields:
+      - {label: "Template Key", name: "templateKey", widget: "hidden", default: "product-page"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Description", name: "description", widget: "text"}
